--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:ital,wght@0,600;1,600&display=swap');
 
 * {
     margin: 0;
@@ -19,7 +19,7 @@ body{
 .apresentacao{
     margin: 10%;
     display: flex;
-    align-items: center ;
+    align-items: center;
     justify-content: space-between
 }
 
@@ -34,5 +34,23 @@ body{
 
 .apresentacao__conteudo__paragrafo{
     font-size: 24px;
-    font-family: "Krona One", sans-serif;
+    font-family: "Montserrat", sans-serif;
+}
+
+.apresentacao__links{
+    display: flex;
+    justify-content: space-between;
+}
+
+.apresentacao__links__link{
+    background-color: #22D4FD;
+    width: 280px;
+    text-align: center;
+    border-radius: 16px;
+    font-size: 24px;
+    font-weight: 600;
+    padding: 21.5px 0;
+    text-decoration: none;
+    color:#000000;
+    font-family: "Montserrat", sans-serif;
 }
