--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 
 body{
-    height: 100vh;
+    /* height: 100vh; */
     background-color: #000000;
     color: #F6F6F6;
 }
@@ -17,7 +17,7 @@ body{
 }
 
 .apresentacao{
-    margin: 10% 20%;
+    padding: 8% 15%;
     display: flex;
     align-items: center;
     justify-content: space-between
@@ -76,5 +76,11 @@ body{
 }
 
 .rodape{
-    
+    padding: 24px;
+    color: #000000;
+    background-color: #22D4FD;
+    text-align: center;
+    font-family: "Montserrat", sans-serif;
+    font-size: 24px;
+    font-weight: 400;
 }
